data/derived/fa15/progs/unify/prog3558.ml.out
Characters 123-136:
  match rand(makeRand(0,4),makeRand(0,4)) with
             ^^^^^^^^^^^^^
Error: This expression has type int * int -> int
       but an expression was expected of type int
